// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications index test snapshots loading 1`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 svg {
  fill: !important;
  height: 24px;
  width: 24px;
}

.c8.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c8.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c12 svg {
  fill: !important;
  height: 16px;
  width: 16px;
}

.c12.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c12.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c11.MuiButton-root {
  height: 32px;
  font-size: 12px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c11.MuiButton-outlined {
  padding: 8px 12px;
  border-color: #d8d8d8;
}

.c6.MuiIconButton-root {
  background-color: #fff;
}

.c6.MuiIconButton-root:hover {
  background-color: #fff;
  color: #009CCC;
}

.c5 {
  padding-right: 12px;
}

.c0 {
  width: 100%;
  margin: 0 auto;
}

.c9 {
  margin: 24px 12px 0 12px;
  padding: 32px 24px 24px 32px;
  background-color: #fff;
  border-radius: 8px;
}

.c14 {
  padding: 12px 24px;
  margin: 12px;
  background-color: #fff;
  color: #1a1a1a;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c14 a {
  color: #00b3ec;
}

.c2 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 20px;
  height: 32px;
}

.c3 {
  margin-right: 8px;
  white-space: nowrap;
}

.c4 {
  background: #fff;
  padding: 0 4px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #00b3ec;
  margin-left: 4px;
  border-radius: 2px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: inherit;
  font-size: 20px;
  background: #00b3ec;
  height: 80px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 32px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;
}

.c1 .MuiListItemIcon-root {
  min-width: 30px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 > * {
  margin-right: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="makeStyles-path-15"
          style="align-items: center;"
        >
          <div
            class="c3"
            role="heading"
          >
            <a
              class="makeStyles-link-17"
              href="/applications"
            >
              Applications
            </a>
          </div>
          <div
            class="c4 section-header-count"
          >
            0
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <button
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root c6"
          tabindex="0"
          title="Account settings"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="c7 c8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: column; width: 100%;"
    >
      <div
        class="c9"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between;"
        >
          <div
            class="c10"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined c11 MuiButton-outlinedPrimary MuiButton-disableElevation"
              id="add-application"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <div
                    class="c7 c12"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </div>
                </span>
                ADD AN APPLICATION
              </span>
            </button>
          </div>
          <a
            href=""
            rel="noopener noreferrer"
            style="color: rgb(0, 179, 236); padding: 12px;"
            target="_blank"
          >
            View open Pull Requests
          </a>
        </div>
        <div
          class="c13 "
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px; color: rgb(0, 179, 236);"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="c14"
      >
        <div>
          Need help? Contact us at 
          <a
            href="mailto:support@weave.works"
          >
            support@weave.works
          </a>
        </div>
        <div
          class=""
        >
          Weave GitOps Enterprise 
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Applications index test snapshots success 1`] = `
.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c32 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #737373;
}

.c38 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #737373;
}

.c39 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 12px;
  font-weight: 600;
  text-transform: capitalize;
  font-style: normal;
  color: #737373;
}

.c9 svg {
  fill: !important;
  height: 24px;
  width: 24px;
}

.c9.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c9.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c9 .c31 {
  margin-left: 4px;
}

.c13 svg {
  fill: !important;
  height: 16px;
  width: 16px;
}

.c13.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c13.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c13 .c31 {
  margin-left: 4px;
}

.c21 svg {
  fill: #737373 !important;
  height: 24px;
  width: 24px;
}

.c21.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c21.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c21 .c31 {
  margin-left: 4px;
  color: #737373;
}

.c30 svg {
  fill: #d8d8d8 !important;
  height: 16px;
  width: 16px;
}

.c30.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c30.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c30 .c31 {
  margin-left: 4px;
  color: #d8d8d8;
}

.c12.MuiButton-root {
  height: 32px;
  font-size: 12px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c12.MuiButton-outlined {
  padding: 8px 12px;
  border-color: #d8d8d8;
}

.c20.MuiButton-root {
  border-radius: 50%;
  min-width: 38px;
  height: 38px;
  padding: 0;
}

.c20.MuiButton-text {
  padding: 0;
}

.c18 {
  padding: 4px 0px;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: auto;
}

.c18 .MuiChip-root {
  margin-right: 4px;
}

.c27 {
  padding: 4px;
}

.c33 {
  padding: 8px;
}

.c28 td {
  text-align: center;
}

.c26.MuiButton-root {
  margin: 0;
  text-transform: none;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.c26.MuiButton-text {
  min-width: 0px;
}

.c26.MuiButton-text .selected {
  color: #1a1a1a;
}

.c26.arrow {
  min-width: 0px;
}

.c24 {
  width: 100%;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: auto;
}

.c24 h2 {
  padding: 8px;
  font-size: 14px;
  font-weight: 600;
  color: #737373;
  margin: 0px;
  white-space: nowrap;
}

.c24 .MuiTableRow-root {
  -webkit-transition: background 0.5s ease-in-out;
  transition: background 0.5s ease-in-out;
}

.c24 .MuiTableRow-root:not(.MuiTableRow-head):hover {
  background: #f5f5f5;
  -webkit-transition: background 0.5s ease-in-out;
  transition: background 0.5s ease-in-out;
}

.c24 table {
  margin-top: 12px;
}

.c24 th {
  padding: 8px;
  background: #F6F7F9;
}

.c24 td {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c34 {
  position: relative;
  height: 100%;
  width: 0px;
  left: 24px;
  -webkit-transition-property: width,left;
  transition-property: width,left;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c34.open {
  left: 0px;
  width: 350px;
}

.c35 {
  background: rbga(255,255,255,0.75);
  height: 100%;
  width: 100%;
  border-left: 2px solid #d8d8d8;
  padding: 24px;
  padding-left: 32px;
}

.c37 .MuiListItem-gutters {
  padding-left: 0px;
}

.c37 .MuiCheckbox-root {
  padding: 0px;
}

.c37 .MuiCheckbox-colorSecondary.Mui-checked {
  color: #00b3ec;
}

.c22 {
  width: 0px;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  margin-left: 4px;
}

.c22.expanded {
  width: 200px;
}

.c19 {
  position: relative;
  padding: 0 12px;
}

.c15 td:nth-child(7) {
  white-space: pre-wrap;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.c7.MuiIconButton-root {
  background-color: #fff;
}

.c7.MuiIconButton-root:hover {
  background-color: #fff;
  color: #009CCC;
}

.c6 {
  padding-right: 12px;
}

.c1 {
  width: 100%;
  margin: 0 auto;
}

.c10 {
  margin: 24px 12px 0 12px;
  padding: 32px 24px 24px 32px;
  background-color: #fff;
  border-radius: 8px;
}

.c40 {
  padding: 12px 24px;
  margin: 12px;
  background-color: #fff;
  color: #1a1a1a;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c40 a {
  color: #00b3ec;
}

.c3 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 20px;
  height: 32px;
}

.c4 {
  margin-right: 8px;
  white-space: nowrap;
}

.c5 {
  background: #fff;
  padding: 0 4px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #00b3ec;
  margin-left: 4px;
  border-radius: 2px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: inherit;
  font-size: 20px;
  background: #00b3ec;
  height: 80px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 32px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;
}

.c2 .MuiListItemIcon-root {
  min-width: 30px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 > * {
  margin-right: 24px;
}

.c0 .Toastify__toast-container {
  width: auto;
}

<div>
  <div
    class="c0"
  >
    <div
      class="Toastify"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--bottom-center"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--default Toastify--animate Toastify__bounce-enter--bottom-center"
          id="xntclmb"
        >
          <div
            class="Toastify__toast-body"
            role="alert"
          >
            <div>
              <div
                class="makeStyles-mainWrapper-38"
              >
                <div>
                  <svg
                    class="makeStyles-icon-37"
                  >
                    error-icon.svg
                  </svg>
                </div>
                <div>
                  <strong
                    style="color: rgb(188, 59, 29);"
                  >
                    Error
                    : 
                  </strong>
                   
                </div>
              </div>
            </div>
          </div>
          <button
            aria-label="close"
            class="Toastify__close-button Toastify__close-button--light"
            type="button"
          >
            <svg
              aria-hidden="true"
              viewBox="0 0 14 16"
            >
              <path
                d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--default"
            role="progressbar"
            style="animation-duration: 20000ms; animation-play-state: paused; opacity: 0;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="makeStyles-path-29"
          style="align-items: center;"
        >
          <div
            class="c4"
            role="heading"
          >
            <a
              class="makeStyles-link-31"
              href="/applications"
            >
              Applications
            </a>
          </div>
          <div
            class="c5 section-header-count"
          >
            0
          </div>
        </div>
      </div>
      <div
        class="c6"
      >
        <button
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root c7"
          tabindex="0"
          title="Account settings"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="c8 c9"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: column; width: 100%;"
    >
      <div
        class="c10"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between;"
        >
          <div
            class="c11"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined c12 MuiButton-outlinedPrimary MuiButton-disableElevation"
              id="add-application"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <div
                    class="c8 c13"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </div>
                </span>
                ADD AN APPLICATION
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <a
            href=""
            rel="noopener noreferrer"
            style="color: rgb(0, 179, 236); padding: 12px;"
            target="_blank"
          >
            View open Pull Requests
          </a>
        </div>
        <div
          class="c14 c15 $de7736a788c0c71d$var$AutomationsTable $7b611b2a53960955$var$URLAddressableTable $eabf06b5ec8ea276$var$FilterableTable"
        >
          <div
            class="c16"
          >
            <div
              class="c17 c18 $9121bed0097d59fd$var$ChipGroup"
            />
            <div
              class="c8 c19"
            >
              <div
                class="c8 $621c541edae1f860$var$SearchField"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text c20 $621c541edae1f860$var$SearchField MuiButton-colorInherit MuiButton-disableElevation"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <div
                      class="c8 c21"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="c22 "
                >
                  <form>
                    <div
                      class="MuiFormControl-root MuiTextField-root $66a683f19021b9f2$var$Input"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          id="table-search"
                          placeholder="Search"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </form>
                </div>
              </div>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-text c20 c15 $de7736a788c0c71d$var$AutomationsTable $7b611b2a53960955$var$URLAddressableTable $eabf06b5ec8ea276$var$FilterableTable MuiButton-colorInherit MuiButton-disableElevation"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <div
                    class="c8 c21"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="c23"
          >
            <div
              class="c24 c15 $de7736a788c0c71d$var$AutomationsTable $7b611b2a53960955$var$URLAddressableTable $eabf06b5ec8ea276$var$FilterableTable"
            >
              <div
                class="MuiTableContainer-root"
              >
                <table
                  aria-label="simple table"
                  class="MuiTable-root"
                >
                  <thead
                    class="MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        scope="col"
                      >
                        <div
                          class="c25"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-text c12 c26 MuiButton-colorInherit MuiButton-disableElevation"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <h2
                                class=""
                              >
                                Name
                              </h2>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                          <div
                            class="c27"
                          />
                          <div
                            style="width: 16px;"
                          />
                        </div>
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        scope="col"
                      >
                        <div
                          class="c25"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-text c12 c26 MuiButton-colorInherit MuiButton-disableElevation"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <h2
                                class=""
                              >
                                Type
                              </h2>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                          <div
                            class="c27"
                          />
                          <div
                            style="width: 16px;"
                          />
                        </div>
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        scope="col"
                      >
                        <div
                          class="c25"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-text c12 c26 MuiButton-colorInherit MuiButton-disableElevation"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <h2
                                class=""
                              >
                                Namespace
                              </h2>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                          <div
                            class="c27"
                          />
                          <div
                            style="width: 16px;"
                          />
                        </div>
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        scope="col"
                      >
                        <div
                          class="c25"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-text c12 c26 MuiButton-colorInherit MuiButton-disableElevation"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <h2
                                class=""
                              >
                                Cluster
                              </h2>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                          <div
                            class="c27"
                          />
                          <div
                            style="width: 16px;"
                          />
                        </div>
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        scope="col"
                      >
                        <div
                          class="c25"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-text c12 c26 MuiButton-colorInherit MuiButton-disableElevation"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <h2
                                class=""
                              >
                                Source
                              </h2>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                          <div
                            class="c27"
                          />
                          <div
                            style="width: 16px;"
                          />
                        </div>
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        scope="col"
                      >
                        <div
                          class="c25"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-text c12 c26 MuiButton-colorInherit MuiButton-disableElevation"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <h2
                                class="selected"
                              >
                                Status
                              </h2>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                          <div
                            class="c27"
                          />
                          <div
                            class="c8 c13 downward"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                              />
                            </svg>
                          </div>
                        </div>
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        scope="col"
                      >
                        <div
                          class="c25"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-text c12 c26 MuiButton-colorInherit MuiButton-disableElevation"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <h2
                                class=""
                              >
                                Message
                              </h2>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                          <div
                            class="c27"
                          />
                          <div
                            style="width: 16px;"
                          />
                        </div>
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        scope="col"
                      >
                        <div
                          class="c25"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-text c12 c26 MuiButton-colorInherit MuiButton-disableElevation"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <h2
                                class=""
                              >
                                Revision
                              </h2>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                          <div
                            class="c27"
                          />
                          <div
                            style="width: 16px;"
                          />
                        </div>
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        scope="col"
                      >
                        <div
                          class="c25"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-text c12 c26 MuiButton-colorInherit MuiButton-disableElevation"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <h2
                                class=""
                              >
                                Last Updated
                              </h2>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                          <div
                            class="c27"
                          />
                          <div
                            style="width: 16px;"
                          />
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root c28"
                      colspan="9"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                        colspan="9"
                      >
                        <div
                          class="c29"
                        >
                          <div
                            class="c8 c30"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                              />
                            </svg>
                          </div>
                          <div
                            class="c27"
                          />
                          <span
                            class="c31 c32"
                            color="neutral30"
                          >
                            No data
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                class="c33"
              />
            </div>
            <div
              class="c34"
              data-testid="container"
            >
              <div
                class="c35"
              >
                <div
                  class="c36 c37"
                >
                  <div
                    class="c17"
                  >
                    <span
                      class="c31 c38"
                      color="neutral30"
                    >
                      Filters
                    </span>
                  </div>
                  <form
                    class="$311205a5eac77e9e$var$ControlledForm"
                  >
                    <ul
                      class="MuiList-root MuiList-padding"
                    >
                      <li
                        class="MuiListItem-root MuiListItem-gutters"
                      >
                        <ul
                          class="MuiList-root MuiList-padding"
                        >
                          <li
                            class="MuiListItem-root MuiListItem-gutters"
                          >
                            <div
                              class="MuiListItemIcon-root"
                            >
                              <span
                                aria-disabled="true"
                                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-39 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-41 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <input
                                    class="PrivateSwitchBase-input-42"
                                    data-indeterminate="false"
                                    disabled=""
                                    id="clusterName"
                                    type="checkbox"
                                    value=""
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                            <span
                              class="c31 c39"
                              color="neutral30"
                            >
                              cluster
                            </span>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="MuiListItem-root MuiListItem-gutters"
                      >
                        <ul
                          class="MuiList-root MuiList-padding"
                        >
                          <li
                            class="MuiListItem-root MuiListItem-gutters"
                          >
                            <div
                              class="MuiListItemIcon-root"
                            >
                              <span
                                aria-disabled="true"
                                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-39 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-41 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <input
                                    class="PrivateSwitchBase-input-42"
                                    data-indeterminate="false"
                                    disabled=""
                                    id="namespace"
                                    type="checkbox"
                                    value=""
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                            <span
                              class="c31 c39"
                              color="neutral30"
                            >
                              namespace
                            </span>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="MuiListItem-root MuiListItem-gutters"
                      >
                        <ul
                          class="MuiList-root MuiList-padding"
                        >
                          <li
                            class="MuiListItem-root MuiListItem-gutters"
                          >
                            <div
                              class="MuiListItemIcon-root"
                            >
                              <span
                                aria-disabled="true"
                                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-39 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-41 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <input
                                    class="PrivateSwitchBase-input-42"
                                    data-indeterminate="false"
                                    disabled=""
                                    id="status"
                                    type="checkbox"
                                    value=""
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                            <span
                              class="c31 c39"
                              color="neutral30"
                            >
                              status
                            </span>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="MuiListItem-root MuiListItem-gutters"
                      >
                        <ul
                          class="MuiList-root MuiList-padding"
                        >
                          <li
                            class="MuiListItem-root MuiListItem-gutters"
                          >
                            <div
                              class="MuiListItemIcon-root"
                            >
                              <span
                                aria-disabled="true"
                                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-39 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-41 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <input
                                    class="PrivateSwitchBase-input-42"
                                    data-indeterminate="false"
                                    disabled=""
                                    id="type"
                                    type="checkbox"
                                    value=""
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                            <span
                              class="c31 c39"
                              color="neutral30"
                            >
                              type
                            </span>
                          </li>
                        </ul>
                      </li>
                    </ul>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c40"
      >
        <div>
          Need help? Contact us at 
          <a
            href="mailto:support@weave.works"
          >
            support@weave.works
          </a>
        </div>
        <div
          class=""
        >
          Weave GitOps Enterprise 
        </div>
      </div>
    </div>
  </div>
</div>
`;
